[package]
name = "bevy_slt"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy integration for SuperLightTUI (slt)"
readme = "README.md"
keywords = ["bevy", "tui", "terminal", "slt"]
categories = ["gui", "game-development"]

[features]
default = ["terminal"]
# Real-terminal rendering. Also enables slt's own `crossterm` feature so the
# in-frame paths it gates (text selection, clipboard, capability probing) are
# compiled in. Headless-only consumers can disable this and skip the terminal
# machinery entirely.
terminal = ["dep:crossterm", "superlighttui/crossterm"]

[dependencies]
bevy_app = "0.19.0-rc.3"
bevy_ecs = "0.19.0-rc.3"
# Must track the crossterm version superlighttui depends on.
crossterm = { version = "0.28", features = [
  "bracketed-paste",
], optional = true }
superlighttui = { version = "0.22.0", default-features = false, features = [
  "bidi",
] }

[dev-dependencies]
bevy = { version = "0.19.0-rc.3", default-features = false, features = [
  "bevy_log",
] }

[[example]]
name = "widget_demo"
required-features = ["terminal"]
